<resources>
    <string name="app_name">NPCreator</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="reroll">Reroll</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="npcreator">NPCreator</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="publicNpcs">NPCs</string>
    <string name="publicNpc">\'s Npc</string>
    <string name="yourNpc">Your NPC</string>
    <string name="profileNpcs">Your NPCs</string>
    <string name="whoAreThey">Who Are They?</string>
    <string name="stats">Stats</string>
    <string name="desc">Description</string>

    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="alignment">Alignment</string>
    <string name="ac">Armor Class</string>
    <string name="hp">Hit Points</string>
    <string name="speed">Speed</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intel">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="savingThrows">Saving Throws</string>
    <string name="skills">Skills</string>
    <string name="senses">Senses</string>
    <string name="langs">Languages</string>
    <string name="cr">Challenge Rating</string>
    <string name="placeholderNum">0</string>
    <string name="actionsHeader">Actions</string>
    <string name="action">Action</string>
    <string name="bonusAction">Bonus Action</string>
    <string name="Reaction">Reaction</string>
    <string name="legendaryAction">Legendary Action</string>
    <string name="lairAction">Lair Action</string>
    <string name="Abilities">Abilities</string>
    <string name="createdBy">Created by</string>
    <string name="personality">Personality</string>
    <string name="deity">Deity:</string>
    <string name="backstory">Backstory</string>
    <string name="occupation">Occupation</string>
    <string name="strengths">Strengths:</string>
    <string name="strengthsHeader">Strengths</string>
    <string name="flaws">Flaws:</string>
    <string name="flawsHeader">Flaws</string>
    <string name="childhood">Childhood:</string>
    <string name="notes">Notes</string>
    <string name="publicSwitch">Post publicly?</string>
    <string name="saveNpc">Save NPC</string>

    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="nameHint">Enter Name</string>
    <string name="occupationHint">Enter Competency and Occupation</string>
    <string name="deityHint">Enter Deity and Domain</string>
    <string name="childhoodHint">Enter Circumstance and Childhood</string>
    <string name="flaw1Hint">Enter Flaw 1</string>
    <string name="flaw2Hint">Enter Flaw 2</string>
    <string name="flaw3Hint">Enter Flaw 3</string>
    <string name="strength1Hint">Enter Strength 1</string>
    <string name="strength2Hint">Enter Strength 2</string>
    <string name="strength3Hint">Enter Strength 3</string>
    <string name="notesHint">Enter NPC Notes</string>

    <string name="accountCreated">Account created</string>
    <string name="nameUpdated">Name updated</string>
    <string name="npcCreated">NPC created</string>
    <string name="npcDeleted">NPC deleted</string>
    <string name="npcUpdated">NPC updated</string>

    <string name="errorEmail">Enter email</string>
    <string name="errorName">Enter name</string>
    <string name="errorPassword">Enter password</string>
    <string name="errorPasswordShort">Password must be at least 6 characters long</string>

    <string name="logoDesc">The letters NPC in purple, orange, and cyan.
        The P is made up of the last stroke of the N, and the C is tucked
        under the bowl of the P.</string>
    <string name="editButtonDesc">Pencil</string>
    <string name="scrollViewDesc">NPC stats scroll view</string>
</resources>