<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editNpcConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNpcFragment" >

    <EditText
        android:id="@+id/editNpcName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/editNpcCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNpcOccupation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/occupation"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcCancelButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNpcName"
        app:layout_constraintTop_toBottomOf="@+id/editNpcName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/editNpcStrengthsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="@string/strengthsHeader"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editNpcOccupation"
        app:layout_constraintTop_toBottomOf="@+id/editNpcOccupation" />

    <View
        android:id="@+id/editNpcDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_npc_logo_black_background"
        app:layout_constraintEnd_toEndOf="@+id/editNpcOccupation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNpcStrengthsHeader"
        app:layout_constraintTop_toBottomOf="@+id/editNpcStrengthsHeader"
        tools:layout_conversion_absoluteHeight="1dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <EditText
        android:id="@+id/editNpcStrength1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/strength1Hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcDivider"
        app:layout_constraintStart_toStartOf="@+id/editNpcDivider"
        app:layout_constraintTop_toBottomOf="@+id/editNpcDivider"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editNpcStrength2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/strength2Hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcStrength1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editNpcStrength1"
        app:layout_constraintTop_toBottomOf="@+id/editNpcStrength1" />

    <EditText
        android:id="@+id/editNpcStrength3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/strength3Hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcStrength2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editNpcStrength2"
        app:layout_constraintTop_toBottomOf="@+id/editNpcStrength2" />

    <TextView
        android:id="@+id/editNpcFlawsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="@string/flawsHeader"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editNpcStrength3"
        app:layout_constraintTop_toBottomOf="@+id/editNpcStrength3" />

    <View
        android:id="@+id/editNpcDivider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_npc_logo_black_background"
        app:layout_constraintEnd_toEndOf="@+id/editNpcOccupation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNpcStrengthsHeader"
        app:layout_constraintTop_toBottomOf="@+id/editNpcFlawsHeader"
        tools:layout_conversion_absoluteHeight="1dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <EditText
        android:id="@+id/editNpcFlaw1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/flaw1Hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcDivider2"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/editNpcDivider2"
        app:layout_constraintTop_toBottomOf="@+id/editNpcDivider2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editNpcFlaw2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/flaw2Hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcDivider2"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/editNpcDivider2"
        app:layout_constraintTop_toBottomOf="@+id/editNpcFlaw1" />

    <EditText
        android:id="@+id/editNpcFlaw3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/flaw3Hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editNpcDivider2"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/editNpcDivider2"
        app:layout_constraintTop_toBottomOf="@+id/editNpcFlaw2" />

    <Button
        android:id="@+id/editNpcSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNpcFlaw3"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>